SEARCH: fixed issue with search input visually shifting on large inputs

--- a/components/search/Search.module.scss
+++ b/components/search/Search.module.scss
@@ -48,6 +48,7 @@
                 font-size: inherit;
                 padding: var(--theme-container-padding-lg);
                 text-wrap: nowrap;
+                max-width: calc(100% - (2 * var(--theme-container-padding-lg)));
             }
 
             input {
